css/style.css
body {
  box-sizing: border-box;
}
@font-face {
  font-family: Geograph;
  src: url(geographeditwebblack.ttf);
}
* {
  padding: 0;
  margin: 0;
}

h1,
h2,
h3,
h5,
h6 {
  color: #192a56 !important;
  font-family: "Geograph", sans-serif !important;
}
p {
  font-family: "Nunito Sans", sans-serif !important;
}

#main-section {
  background-color: #dfe6e9;
}
.container-fluid {
  width: 100%;
}
.btn {
  border-radius: 20px !important;
  height: 40px !important;
}

#sol-fem-logo {
  color: #fff !important;
}
h1 {
  font-weight: bold;
  font-size: 36px;
}
.alert {
  display: none;
}

.mint-text {
  text-align: justify;
}
.btn-primary {
  background-color: #192a56 !important;
  border-color: #192a56 !important;
}
.whitepaper {
  background-color: #f79f1f;
  color: white;
}
#nav_bar {
  background-color: #192a56;
  color: #f3f3f3;
  margin-bottom: 80px !important;
}
#nav_bar .nav-link {
  color: #f3f3f3;
}
.navbar-nav > .nav-item {
  margin-left: 20px;
}
.heading {
  margin-top: 10rem !important;
  font-weight: 600;
  font-size: 36px;
}

/* #mint-image-section{
  d
} */
.roadmap {
  gap: 60px;
}

.stages {
  padding: 20px;
  margin-bottom: 10px;
}
.stages > ul {
  text-align: justify;
  margin-left: 30px;
}
.stages:nth-child(1) {
  background-color: #0abde3;
  color: #30336b;
}
.stages:nth-child(2) {
  background-color: #c7ecee;
  color: #30336b;
}
.stages:nth-child(3) {
  background-color: #7ed6df;
  color: #30336b;
}
.stages:nth-child(4) {
  background-color: #9980fa;
  color: #30336b;
}
.stages:nth-child(5) {
  background-color: #e84393;
  color: #30336b;
}
.hidden {
  visibility: hidden;
}
.nft-image {
  width: 60%;
}
#hero-section {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: left !important;
}

#whitepaper {
  background-color: #192a56;
  color: #f3f3f3;
}
#whitepaper :is(h2, h3) {
  color: white !important;
}
#whitepaper button {
  background-color: #fbc531;
  border: 1px solid #fbc531;
}
#mint {
  padding: 40px;
  background-color: #dff9fb;
}
.navbar-toggler .navbar-toggler-icon {
  color: #f3f3f3 !important;
  /* background-color: white; */
}

#main_footer {
  color: #f3f3f3;
  background-color: #192a56;
}
@media screen and (max-width: 480px) {
  .nft-image {
    width: 100%;
  }
  .card-header h5 {
    word-wrap: break-word;
    width: 90%;
    font-size: 14px;
  }
  .btn-link {
    font-size: 12px !important;
  }
  #whitepaper .col-md-6 {
    text-align: center;
  }
  .roadmap {
    gap: 0px;
  }
  #mint {
    background-color: #dff9fb;
    padding: 8px;
  }
  #hero-section h1 {
    margin-top: 20px;
  }
}

